k8s/node/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: microservices-example
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      service: server
  template:
    metadata:
      labels:
        service: server
    spec:
      containers:
      - image: microservices-example-node:prod
        name: microservices-example-node
        ports:
          - containerPort: 9000
            name: http
        imagePullPolicy: Never
      restartPolicy: Always
status: {}
