k8s/node/ingress-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ing-node-service
  labels:
    app: ing-node
spec:
  type: NodePort
  selector:
    app: ing
  ports:
  - port: 80
    targetPort: 80
