k8s/node/node-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: microservices-example
  name: node-server
spec:
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    app: node-server
