k8s/node/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: microservices-example
  name: server
spec:
  ports:
  - port: 9000
    targetPort: http
  selector:
    app: server
